controller/test/e2e/tests/manifests/agent-gateway-integration.yaml
image:
  registry: ghcr.io/agentgateway
  tag: v1.0.1-dev
  pullPolicy: IfNotPresent

# Configuration for the kgateway controller pod
controller:
  logLevel: debug
  image:
    repository: agentgateway-controller

inferenceExtension:
  enabled: true
