controller/test/e2e/tests/manifests/inference-extension-helm.yaml
# Remove image registry directive when https://github.com/kgateway-dev/kgateway/issues/11359 is fixed
image:
  registry: ghcr.io/agentgateway

# Configuration for the kgateway controller pod
controller:
  logLevel: debug

inferenceExtension:
  enabled: true
