controller/test/e2e/tests/manifests/multiple_installs_values1.yaml
discoveryNamespaceSelectors:
- matchExpressions:
  - key: kubernetes.io/metadata.name
    operator: In
    values:
    - kgw-test-1
