controller/test/e2e/tests/manifests/multiple_installs_values2.yaml
discoveryNamespaceSelectors:
- matchLabels:
    kubernetes.io/metadata.name: kgw-test-2
